--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.10.0",
     "chart.js": "^4.5.0",
     "chartjs": "^0.3.24",
+    "framer-motion": "^12.23.6",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
